Changelog
=========

3.2.5 (unreleased)
------------------

- Fixed zipexport-enable upgrade step to match the new registry entry.
  With ftw.zipexport 1.2.0 the registry name changes which brakes our upgrade step.
  [lknoepfel]

- Added responsible org field on repositoryfolder.
  [lknoepfel]

- Treeportlet: Enable scrolling in the portlet and scroll down to selected item.
  [Julian Infanger]

- Changed source for repository import: from csv to xls.
  [lknoepfel]

- Byline: Removed icon from byline.
  [Julian Infanger]

- Fixed interface in dossiers ConstrainTypeDecider.
  [phgross]

- Updated ftw.zipexport registry entry to multi-value field.
  [lknoepfel]

- Added handling for missing document_type in document view.
  This field is hidden on a customer installation.
  [lknoepfel]

- Dossierdetails PDF: Fixed doubled encoded repository_path.
  [phgross]

- Dossierdetails PDF: Fixed UnicodeEncodeError in responsible getter.
  [phgross]

- Passing search string from live search to advanced search.
  Using SearchableText from the url as default value in advanced search.
  [lknoepfel]

- Styled document from template form.
  [lknoepfel]

- Setup: Activate navigation portlet on the templatedossier.
  [phgross]

- Allow nested Templatedossiers.
  [phgross]

- Limit query depth in templatedossier listings(documents, trash).
  [phgross]

- Treeportlet: Implement deferred tree rendering.
  [phgross]

- Fixed German translation in logout overlay.
  [pha]

3.2.4 (2014-05-26)
------------------

- Added missing french (and german) translations.
  Fixed i18n domain and translated vdex.
  [lknoepfel]

- Mail view: use sprite icons in the attachments list.
  [phgross]

- Implemented cache invalidation for TreeView portlet cache.
  [lgraf]

- Update og.mail tests according to changes in ftw.mail.
  (See https://github.com/4teamwork/ftw.mail/pull/17)

- Fixed typo in test_overview.py.
  [lknoepfel]

- Moved create repository script from opengever.zug package.
  [lknoepfel]
